Revert "fix: misalignment on shipping price for mobile (#7639)"
This reverts commit 2d5dd784f6d93a6649f7d44b6e3a346ffae9b60a.

--- a/projects/storefrontstyles/scss/components/checkout/steps/shipping-method/_delivery-mode.scss
+++ b/projects/storefrontstyles/scss/components/checkout/steps/shipping-method/_delivery-mode.scss
@@ -2,7 +2,6 @@
 
 %cx-delivery-mode {
   @include checkout-media-style();
-  padding-top: 10px;
 
   .form-check {
     display: flex;
@@ -17,13 +16,12 @@
       justify-content: space-between;
       flex-wrap: wrap;
 
-      .cx-delivery-mode {
-        flex: auto;
-        text-align: left;
+      .cx-delivery-shipping {
+        flex: 50%;
       }
 
       .cx-delivery-price {
-        flex: auto;
+        flex: 50%;
         text-align: right;
       }
 
